Wed Nov 25 10:59:19 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/cachemanager/__init__.py,xappy/cachemanager/generic.py,
	  xappy/cachemanager/xapian_manager.py: Release these files under
	  the MIT/X license.

Wed Nov 25 10:52:12 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/cachemanager/queryinvert.py: Some fairly efficient code to
	  invert lists of docids for queries, thanks to Shane for the
	  original implementation.

Tue Nov 24 11:23:02 GMT 2009  Richard Boulton <richard@tartarus.org>

	* libs/get_xapian.py,utils/make_xappy_tarballs: Update for new
	  version of Xapian; main difference is a considerable improvement
	  in speed with the chert backend.  WARNING: there appears to be a
	  compiler bug in GCC 4.2 which can cause searches using chert to
	  fail.  If using GCC, I recommend using GCC 4.3 or later to avoid
	  this bug.

Tue Nov 24 10:16:31 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/indexerconnection.py: Ignore missing docids when applying
	  the cached items to a database - this is likely to be deliberate.

Fri Nov 20 11:16:27 GMT 2009  Richard Boulton <richard@tartarus.org>

	* libs/get_xapian.py: New version of xapian - should have improved
	  performance for chert when values are in use.

Thu Nov 19 15:41:50 GMT 2009  Richard Boulton <richard@tartarus.org>

	* libs/get_xapian.py,utils/make_xappy_tarballs,
	  xappy/searchconnection.py: Link to new xapian packages.  These
	  packages have a slightly different API for doing sorting, so
	  update searchconnection.py accordingly: this does mean that the
	  latest version of xapian is required to perform custom sorting,
	  so xapian and xappy need to be upgraded together here.

Mon Nov 09 04:45:55 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* docs/cachedresults.rst: Tweak final phrase.

Mon Nov 09 04:35:22 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* docs/cachedresults.rst: Documentation, and lots of analysis.
